--- a/assets/ref.bib
+++ b/assets/ref.bib
@@ -95,13 +95,15 @@
   date={2023}
 }
 
-@unpublished{mayank2023haptic,
+@inproceedings{mayank2023haptic,
   title={PowVRtool: A Handheld Haptic Device for Realistic Power Tool Feedback in VR-Based Manufacturing Training},
-  author={Patel, Mayank and Ipsita, Ananya and Erickson, Levi and Maheshwari, Priyam and Ramani, Karthik},
+  author={Patel, Mayank and Unmesh, Asim and Ipsita, Ananya and Erickson, Levi and Maheshwari, Priyam and Jain, Rahul and Shi, Jingyu and Blumenschein, Laura H and Ramani, Karthik},
   booktitle={CHI Conference on Human Factors in Computing Systems [Submitted, In Review]},
   pages={1--18},
   year={2025},
-  date={2025}
+  date={2025},
+  address={West Lafayette, Indiana, United States},
+  organization={Purdue University}
 }
 
 @misc{ramani2022system,
