--- a/assets/ref.bib
+++ b/assets/ref.bib
@@ -95,7 +95,7 @@
   date={2023}
 }
 
-@inproceedings{mayank2023haptic,
+@unpublished{mayank2023haptic,
   title={PowVRtool: A Handheld Haptic Device for Realistic Power Tool Feedback in VR-Based Manufacturing Training},
   author={Patel, Mayank and Unmesh, Asim and Ipsita, Ananya and Erickson, Levi and Maheshwari, Priyam and Jain, Rahul and Shi, Jingyu and Blumenschein, Laura H and Ramani, Karthik},
   booktitle={CHI Conference on Human Factors in Computing Systems [Submitted, In Review]},
